# krossword

./: AUTHORS  CMakeLists.txt  Changelog  README  README.md  TODO  krossword.xml  krosswordpuzzle.xml
crosswordthumbcreator/: CMakeLists.txt  README  crosswordthumbnail.cpp  crosswordthumbnail.desktop  crosswordthumbnail.h  krossword.cpp  krossword.h  krosswordpuzreader.cpp  krosswordpuzreader.h  krosswordxmlreader.cpp  krosswordxmlreader.h
crosswordthumbcreator/cells/: .directory  cluecell.cpp  cluecell.h  imagecell.cpp  imagecell.h  krosswordcell.cpp  krosswordcell.h  lettercell.cpp  lettercell.h  spannedcell.cpp  spannedcell.h
doc/: CMakeLists.txt  index.docbook
icons/: .directory  CMakeLists.txt
po/: CMakeLists.txt  bs.po  cs.po  de.po  eo.po  es.po  et.po  fr.po  ga.po  gl.po  hu.po  it.po  krossword.pot  mai.po  mr.po  nds.po  nl.po  pl.po  pt.po  pt_BR.po  sk.po  sv.po  tr.po  ug.po  uk.po
puzzles/: Bremer Anzeiger 27.09.2009.kwpz  Easy.puz
src/: .directory  CMakeLists.txt  Messages.sh  animator.cpp  animator.h  clue_number_mapping.ui  clue_properties_dock.ui  clueexpanderitem.cpp  clueexpanderitem.h  cluemodel.cpp  cluemodel.h  commands.cpp  commands.h  configure_details.ui  convert_crossword_type.ui  create_new.ui  crosswordxmlguiwindow.cpp  crosswordxmlguiwindow.h  database_connection.ui  dictionaries.ui  dictionary.cpp  dictionary.h  download.ui  export_to_image.ui  extendedsqltablemodel.cpp  extendedsqltablemodel.h  gamegui.cpp  gamegui.h  global.cpp  global.h  headeritem.cpp  headeritem.h  htmldelegate.cpp  htmldelegate.h  image_properties_dock.ui  kgrid2d.h  krossword.cpp  krossword.desktop  krossword.h  krossword.kcfg  (+44 more)
src/cells/: Sources.cmake  cluecell.cpp  cluecell.h  imagecell.cpp  imagecell.h  krosswordcell.cpp  krosswordcell.h  lettercell.cpp  lettercell.h  spannedcell.cpp  spannedcell.h
src/dialogs/: Sources.cmake  answerwidget.cpp  answerwidget.h  convertcrossworddialog.cpp  convertcrossworddialog.h  createnewcrossworddialog.cpp  createnewcrossworddialog.h  crosswordpreviewwidget.cpp  crosswordpreviewwidget.h  crosswordpropertiesdialog.cpp  crosswordpropertiesdialog.h  crosswordtypeconfiguredetailsdialog.cpp  crosswordtypeconfiguredetailsdialog.h  crosswordtypewidget.cpp  crosswordtypewidget.h  currentcellwidget.cpp  currentcellwidget.h  currentcluewidget.cpp  currentcluewidget.h  dictionarydialog.cpp  dictionarydialog.h  movecellsdialog.cpp  movecellsdialog.h  printpreviewdialog.cpp  printpreviewdialog.h  printpreviewdialog.ui  statisticsdialog.cpp  statisticsdialog.h
src/dialogs/cellwidgets/: Sources.cmake  cluecellwidget.cpp  cluecellwidget.h  imagecellwidget.cpp  imagecellwidget.h  solutionlettercellwidget.cpp  solutionlettercellwidget.h
src/dictionary/: Sources.cmake  database_connection.ui  dictionarygui.cpp  dictionarygui.h  dictionarygui.ui  dictionarymanager.cpp  dictionarymanager.h  dictionarymodel.cpp  dictionarymodel.h
src/io/: Sources.cmake  crosswordio.h  iomanager.cpp  iomanager.h  krosswordpuzreader.cpp  krosswordpuzreader.h  krosswordxmlreader.cpp  krosswordxmlreader.h  krosswordxmlwriter.cpp  krosswordxmlwriter.h  kwpmanager.cpp  kwpmanager.h  kwpzmanager.cpp  kwpzmanager.h  puzmanager.cpp  puzmanager.h
templates/: CMakeLists.txt
templates/American/: Barred Crossword 15x15.kwpz  Crossword 14x15.kwpz  Crossword 15x15.kwpz  Crossword 21x21 b.kwpz  Crossword 21x21.kwpz
templates/Swedish/: Crossword 24x15 With Image.kwpz
themes/: CMakeLists.txt  classic.desktop  classic.svgz  default.desktop  default.svgz  egyptian.desktop  egyptian.svgz  ink.desktop  ink.svgz  scribble.desktop  scribble.svgz  wood.desktop  wood.svgz
