
install( FILES American/Crossword\ 14x15.kwpz
	       American/Crossword\ 15x15.kwpz
	       American/Crossword\ 21x21.kwpz
	       American/Crossword\ 21x21\ b.kwpz
	       American/Barred\ Crossword\ 15x15.kwpz
	 DESTINATION ${DATA_INSTALL_DIR}/krosswordpuzzle/templates/American )
install( FILES Swedish/Crossword\ 24x15\ With\ Image.kwpz
	 DESTINATION ${DATA_INSTALL_DIR}/krosswordpuzzle/templates/Swedish )
